@@ -5,6 +5,8 @@ Changelog for getTables.
 - Инструкции autosave.refresh.row и autosave.refresh.form.
 - select autocomplect не требует field_content.
 - Инструкция table subs. В подтаблицы можно табы.
+- Инструкция tabs[tab].tables. В таб можно поместить несколько талиц.
+- Исправление ошибок grtTree.
 
 1.11.3-alpha
 - Добавлено событие getTablesLoadGTSConfig для изменения gts-конфига, когда нельзя редактировать исходник.
